--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body {
     background-color: white;
 }
 
+main p {
+    font-size: 100px;
+    text-align: center;
+    font-family: Poppins, ;
+}
+
 /* Header */
 header {
         background-color: black;
@@ -68,6 +74,16 @@ nav ul li a:hover {
     font-family: Poppins, Arial;
     padding-top: 15px;
     text-align: center;
+    border: 5px black;
+}
+
+#about h2 {
+    text-align: center;
+    padding-top: 15px;
+    font-size: 40px;
+    background-color: black;
+    color: white;
+    padding-bottom: 20px;
 }
 
 /* -- About Me */
@@ -83,20 +99,66 @@ nav ul li a:hover {
     margin-left: 30px;
     margin-right: 30px;
     font-size: 21px;
+    padding-bottom: 15px;
 }
 
 #projects {
-    padding-top: 15px;
+    padding-top: 30px;
     text-align: center;
-    display: inline-block;
+    margin: 20px auto;
+    padding-left: 60px;
+    background-color: black;
+    color: white;
 }
 
 #projects img {
-    max-width: 200px;
+    max-width: 700px;
     padding-top: 15px;
-    margin: 0 auto 10px;
+    margin: 20px auto;
+    padding-left: 20px;
+    display: inline;
+    border-width: 5px;
 }
 
-project h2 {
-    font-size: 30px;
+#projects h2 {
+    font-size: 40px;
+    text-align: center;
+}
+
+#projects article {
+    font-size: 20px;
+    display: inline-block;
+}
+
+#projects p {
+    text-align: centre;
+}
+
+article {
+    display: inline-block;
+}
+
+#contact {
+    text-align: center;
+    margin: 20px auto;
+    padding-left: 60px;
+    display: inline;
+    font-size: 40px;
+}
+
+
+#contact p {
+    font-family: Poppins, Arial;
+    font-size: 25px;
+}
+
+form {
+}
+
+footer p {
+    font-family: Poppins, Arial;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: 25px;
 }
