--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     margin: auto;
     padding: 0%;
+    width: auto;
 }
 body {
     font-family: Poppins, Arial;
@@ -13,7 +14,7 @@ body {
 }
 
 main p {
-    font-size: 100px;
+    font-size: 160px;
     text-align: center;
     font-family: Poppins, ;
 }
@@ -27,7 +28,7 @@ header {
 }
 
 .title {
-    font-size: 40px;
+    font-size: 60px;
     font-weight: bold;
     margin: 0;
     color: white;
@@ -39,6 +40,7 @@ h1 {
     color: black;
     display: inline;
     padding-bottom: 70px;
+
 }
 
 /* Navigation */
@@ -75,12 +77,13 @@ nav ul li a:hover {
     padding-top: 15px;
     text-align: center;
     border: 5px black;
+    border-radius: 30%;
 }
 
 #about h2 {
     text-align: center;
     padding-top: 15px;
-    font-size: 40px;
+    font-size: 80px;
     background-color: black;
     color: white;
     padding-bottom: 20px;
@@ -89,7 +92,7 @@ nav ul li a:hover {
 /* -- About Me */
 #about img {
     max-width: 200px;
-    padding-top: 15px;
+    padding-top: 30px;
     display: block;
     margin: 0 auto 10px;
 }
@@ -109,6 +112,7 @@ nav ul li a:hover {
     padding-left: 60px;
     background-color: black;
     color: white;
+    padding-bottom: 30px;
 }
 
 #projects img {
@@ -121,7 +125,7 @@ nav ul li a:hover {
 }
 
 #projects h2 {
-    font-size: 40px;
+    font-size: 80px;
     text-align: center;
 }
 
@@ -132,6 +136,7 @@ nav ul li a:hover {
 
 #projects p {
     text-align: centre;
+    font-size: 30px;
 }
 
 article {
@@ -143,16 +148,25 @@ article {
     margin: 20px auto;
     padding-left: 60px;
     display: inline;
-    font-size: 40px;
+}
+
+#contact h2 {
+    padding-top: 5px;
+    font-size: 80px;
 }
 
 
 #contact p {
     font-family: Poppins, Arial;
-    font-size: 25px;
+    padding-top: 5px;
+    padding-bottom: 35px;
+    font-size: 20px;
 }
 
-form {
+#contact form {
+    display: block;
+    padding-bottom: 40px;
+
 }
 
 footer p {
@@ -160,5 +174,5 @@ footer p {
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
 }
