--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: auto;
     padding: 0%;
     width: auto;
+
 }
 body {
     font-family: Poppins, Arial;
@@ -121,6 +122,7 @@ nav ul li a:hover {
     padding-left: 20px;
     display: inline;
     border-width: 5px;
+    max-width: 80%;
 }
 
 #projects h2 {
@@ -231,4 +233,46 @@ footer p {
     color: white;
     text-align: center;
     font-size: 20px;
+}
+
+.project-img {
+    max-width: 80%;
+}
+
+@media (max-width: 992px) { /* Tablets */
+    .project-img {
+        max-width: 70%;
+    }
+    h3 {
+        font-size: 1.8rem !important;
+    }
+    p {
+        font-size: 1.2rem !important;
+    }
+}
+
+@media (max-width: 768px) { /* Mobile */
+    .project-img {
+        max-width: 60%;
+    }
+    h3 {
+        font-size: 1.5rem !important;
+    }
+    p {
+        font-size: 1rem !important;
+    }
+}
+
+
+@media (max-width: 992px) { /* Tablets */
+    main p {
+        font-size: 3rem;
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 768px) { /* Mobile */
+    main p {
+        font-size: 3rem;
+    }
 }
